# invest_manager

./: .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  requurements.txt  test.py
data/: db.sqlite3
deploy/: nginx.conf
invest_manager/: asgi.py  settings.py  urls.py  wsgi.py
investments/: admin.py  models.py  serializers.py  views.py
investments/migrations/: 0001_initial.py
investments/static/investments/js/: dashboard.js
investments/templates/: dashboard.html
investments/templates/dashboard/: dashboard.html
