[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Lambda-99"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
djangorestframework = "^3.14"
gunicorn = "^21.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^24.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
