[tool.poetry]
name = "invest-manager"
version = "0.1.0"
description = ""
authors = ["Lambda-99"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
djangorestframework = "^3.14"
gunicorn = "^21.2"
uvicorn = "^0.37.0"
environ = "^1.0"
django-environ = "^0.12.0"
psycopg = {extras = ["binary"], version = "^3.2.10"}
bs4 = "^0.0.2"
selenium = "^4.36.0"
webdriver-manager = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^24.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
